--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -18,6 +18,38 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Use NodeJS 20
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Set npm environment variables
+        run: |
+          echo "VUE_APP_API=${{ secrets.VUE_APP_API }}" >> $GITHUB_ENV
+          echo "VUE_APP_BASE_URL=${{ secrets.VUE_APP_BASE_URL }}" >> $GITHUB_ENV
+
+      
+      - name: Install Frontend dependencies
+        run: |
+          cd frontend
+          npm install 
+      - name: Build frontend
+        run: |
+          cd frontend
+          npm run build
+      
+      - name: Deploy Frontend to Server
+        uses: easingthemes/ssh-deploy@v2.1.5
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.REMOTE_PRIVATE_KEY }}
+          ARGS: "-rltgoDzvO --delete"
+          SOURCE: "frontend/dist"
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USERNAME }}
+          TARGET: "/var/www/blogfrontend"
+          SCRIPT: |
+            nginx -s reload
+            
       - name: Run remote scripts
         uses: appleboy/ssh-action@master
         with:
