--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -34,7 +34,7 @@ jobs:
       
       - name: Deploy Frontend to Server
         uses: easingthemes/ssh-deploy@v2.1.5
-        env:
+        with:
           SSH_PRIVATE_KEY: ${{ secrets.REMOTE_PRIVATE_KEY }}
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USERNAME }}
